tests/fixtures/invalid/str_pow_dict.py
# Cannot power Str and Dict[str, int]
x: str = "hello" ** {"a": 1}
